docs: improve Distr MCP docs (#161)
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/content/docs/docs/integrations/mcp.mdx
+++ b/src/content/docs/docs/integrations/mcp.mdx
@@ -1,6 +1,6 @@
 ---
 title: Distr MCP Server
-description: The Distr MCP Server can be configured as tool to manage Kubernetes and Docker deployments.
+description: The Distr MCP Server hosted by HyprMCP lets LLM-powered agents interact with the Distr applications, deployments, and logs.
 sidebar:
   order: 3
 ---
@@ -10,8 +10,8 @@ import {Image} from 'astro:assets';
 import mcpConfig from './mcp/mcp.json?raw';
 import distrMCPConfig from '../../../../assets/docs/integrations/mcp/distr-mcp-tools.png';
 
-Distr also exposes its endpoints via the [model context protocol](https://modelcontextprotocol.io/introduction)
-to allow LLM-powered agents to interact with the Distr tools.
+Distr exposes its endpoints via the [Model Context Protocol](https://modelcontextprotocol.io/introduction)
+to allow LLM-powered agents to interact with Distr applications, deployments, and logs.
 
 Common use cases include:
 
@@ -21,10 +21,40 @@ Common use cases include:
 
 ## Getting Started With the Distr MCP Server
 
-The Distr MCP Server is a [separate go command](https://github.com/glasskube/distr/tree/main/cmd/mcp)
-that can be compiled locally.
+The Distr MCP server supports streamable HTTP and stdio as transport methods.
 
-### Build the Distr MCP Server
+1.  Remote Hosted MCP server
+2.  Locally Running MCP server
+
+### 1. Using the Distr Hosted Remote MCP Server
+
+The Distr MCP server is hosted and secured by HyprMCP ([https://hyprmcp.com](https://hyprmcp.com)).
+
+It can be accessed via: [`https://glasskube.hyprmcp.cloud/distr/mcp`](https://glasskube.hyprmcp.cloud/distr/mcp).
+
+#### Authentication
+
+<Aside type="caution">
+  Authentication is required to perform actions against the Distr MCP server
+  (and the Distr API).
+</Aside>
+
+Configure a [personal access token (PAT)](/docs/integrations/personal-access-token/) in an `Authorization` header when calling the MCP server.
+
+**Header name:** `Authorization`
+
+**Header value:** `AccessToken distr-bc46...`
+
+Example configuration for Claude Code would look like:
+
+```shell
+claude mcp add --transport http distr https://glasskube.hyprmcp.cloud/distr/mcp --header "Authorization: AccessToken distr-bc46..."
+```
+
+### 2. Using the Distr MCP Server Locally
+
+The Distr MCP Server is a [separate Go command](https://github.com/glasskube/distr/tree/main/cmd/mcp)
+that can be compiled locally.
 
 Make sure you have downloaded the Distr source code and have Go installed.
 Then, you can build the Distr MCP Server with the following command:
@@ -33,18 +63,18 @@ Then, you can build the Distr MCP Server with the following command:
 make build-mcp-server
 ```
 
-After compilation, the MCP server binary will be available in the `./dist/` directory.
-Which can be verified with `./dist/mcp-server --help`.
+After compilation, the MCP server binary will be available in the `./dist/` directory,
+which can be verified with `./dist/mcp-server --help`.
 
-### Configure the Distr MCP Server Tools
+#### Local MCP Server Configuration
 
 The Distr MCP Server exposes its executable functions via [tools](https://modelcontextprotocol.io/docs/concepts/tools).
 
-If you want to use all tools, you can extend your `mcp.json` configuration file in your MCP client:
+To use all tools, extend your `mcp.json` configuration file in your MCP client:
 
 <Aside type="note">
-  Make sure to use to configure the absolute path to the `mcp-server` binary in
-  the `command` section you just built above in your `mcp.json` file.
+  Make sure to configure the absolute path to the `mcp-server` binary in the
+  `command` section of your `mcp.json` file.
 </Aside>
 
 <Code code={mcpConfig} lang="json" title="mcp.json" />
@@ -54,14 +84,14 @@ to point the MCP server against a different Distr instance.
 
 If configured correctly, your MCP client will list the available tools:
 
-<Image src={distrMCPConfig} alt="Sucessfull Distr MCP Server confguration" />
+<Image src={distrMCPConfig} alt="Successful Distr MCP Server configuration" />
 
-## Interact with the Distr MCP Server
+## Distr MCP Server Use Cases
 
-After configuring the Distr MCP Server, you can perform prompts that gather additional
-information from Distr via the Distr MCP Sever.
+After configuring the Distr MCP Server, you can use prompts that gather additional
+information from Distr via the Distr MCP Server.
 
-### Get all deployments and group them by their status
+### Get All Deployments and Group Them by Status
 
 <Tabs>
   <TabItem label="Prompt">
@@ -90,11 +120,11 @@ information from Distr via the Distr MCP Sever.
 
 </Tabs>
 
-### Investigate failed deployments
+### Investigate Failed Deployments
 
 <Tabs>
   <TabItem label="Prompt">
-    > Why do the deployments are in the status error, show the latest log.
+    > Why are the deployments in error status? Show the latest log.
   </TabItem>
   <TabItem label="Response">
     Here are the deployments in error status and the reason why, including their latest log:
