--- a/src/content/docs/docs/guides/end-customer-registry-view.mdx
+++ b/src/content/docs/docs/guides/end-customer-registry-view.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import customerPortalLight from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-light.png';
 import customerPortalDark from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-dark.png';
 import artifactUICustomerLight from '../../../../assets/docs/guides/customer-view/artifact-ui-customer-light.png';
