--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import lightSlug from '../../../../assets/docs/product/registry/light-slug.png';
 import darkSlug from '../../../../assets/docs/product/registry/dark-slug.png';
 import dashboardArtifactViewLight from '../../../../assets/docs/product/registry/dashboard-artifact-view-light.png';
