--- a/src/content/docs/docs/privacy-policy.mdx
+++ b/src/content/docs/docs/privacy-policy.mdx
@@ -39,7 +39,7 @@ We collect the following categories of personal data:
 
 - **Device Data**: IP address, browser type, OS, device identifiers
 - **Usage Data**: Pages visited, logs, timestamps
-- **Cookies & Tracking**: Analytics (e.g., PostHog)
+- **Cookies & Tracking**: Analytics
 
 ### C. Information from Third Parties
 
@@ -107,7 +107,7 @@ We **do not sell** your personal information.
 
 We may share data with:
 
-- **Vetted service providers** (e.g., Stripe, PostHog)
+- **Vetted service providers** (e.g., Stripe)
 - **Cloud platforms** if you connect them
 - **Authorities** when required by law
 
