--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import helmAgentLight from '../../../../assets/docs/product/deployment-agents/helm-agent-light.png';
 import helmAgentDark from '../../../../assets/docs/product/deployment-agents/helm-agent-dark.png';
 import dockerAgentLight from '../../../../assets/docs/product/deployment-agents/docker-agent-light.png';
