--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 1
 ---
 
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import hubLight from '../../../../assets/docs/product/vendor-portal/hub-light.png';
 import hubDark from '../../../../assets/docs/product/vendor-portal/hub-dark.png';
 
