--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 import {Aside, Steps, Tabs, TabItem} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import airgappedLight from '../../../../assets/docs/use-cases/airgapped/airgapped-light.png';
 import airgappedDark from '../../../../assets/docs/use-cases/airgapped/airgapped-dark.png';
 
