--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 import {Aside, Steps} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import assistedSelfManagedLight from '../../../../assets/docs/use-cases/assisted-self-managed/assisted-self-managed-light.png';
 import assistedSelfManagedDark from '../../../../assets/docs/use-cases/assisted-self-managed/assisted-self-managed-dark.png';
 
