--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 import {Aside, Steps} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import fullySelfManagedLight from '../../../../assets/docs/use-cases/fully-self-managed/fully-self-managed-light.png';
 import fullySelfManagedDark from '../../../../assets/docs/use-cases/fully-self-managed/fully-self-managed-dark.png';
 
