--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 4
 ---
 
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import brandingConfigLight from '../../../../assets/docs/product/branding/branding-config-light.png';
 import brandingConfigDark from '../../../../assets/docs/product/branding/branding-config-dark.png';
 import customerPortalLight from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-light.png';
