--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import customerPortalLight from '../../../../assets/docs/product/vendor-portal/customer-portal-light.png';
 import customerPortalDark from '../../../../assets/docs/product/vendor-portal/customer-portal-dark.png';
 
