--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -6,7 +6,7 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import lightModeRegistry from '../../../../assets/docs/product/registry/light-mode-registry.png';
 import darkModeRegistry from '../../../../assets/docs/product/registry/dark-mode-registry.png';
 import artifactsListLight from '../../../../assets/docs/product/registry/artifacts-list-light.png';
