--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 import {Aside, Steps} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/ThemedImage.astro';
+import ThemedImage from '../../../../components/util/ThemedImage.astro';
 import byocLight from '../../../../assets/docs/use-cases/byoc/byoc-light.png';
 import byocDark from '../../../../assets/docs/use-cases/byoc/byoc-dark.png';
 
