chore: use relative imports
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/content/docs/docs/guides/end-customer-registry-view.mdx
+++ b/src/content/docs/docs/guides/end-customer-registry-view.mdx
@@ -7,25 +7,25 @@ sidebar:
 ---
 
 import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import customerPortalLight from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-light.png';
-import customerPortalDark from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-dark.png';
-import artifactUICustomerLight from '../../../../assets/docs/guides/customer-view/artifact-ui-customer-light.png';
-import artifactUICustomerDark from '../../../../assets/docs/guides/customer-view/artifact-ui-customer-dark.png';
-import artifactUIDetailsLight from '../../../../assets/docs/guides/customer-view/artifact-ui-details-light.png';
-import artifactUIDetailsDark from '../../../../assets/docs/guides/customer-view/artifact-ui-details-dark.png';
-import customerAgentNameLight from '../../../../assets/docs/guides/customer-view/customer-agent-name-light.png';
-import customerAgentNameDark from '../../../../assets/docs/guides/customer-view/customer-agent-name-dark.png';
-import helmNSLight from '../../../../assets/docs/guides/customer-view/helm-ns-light.png';
-import helmNSDark from '../../../../assets/docs/guides/customer-view/helm-ns-dark.png';
-import configLight from '../../../../assets/docs/guides/customer-view/config-light.png';
-import configDark from '../../../../assets/docs/guides/customer-view/config-dark.png';
-import statusLight from '../../../../assets/docs/guides/customer-view/status-light.png';
-import statusDark from '../../../../assets/docs/guides/customer-view/status-dark.png';
-import logsLight from '../../../../assets/docs/guides/customer-view/logs-light.png';
-import logsDark from '../../../../assets/docs/guides/customer-view/logs-dark.png';
-import updateDeployLight from '../../../../assets/docs/guides/customer-view/update-deploy-light.png';
-import updateDeployDark from '../../../../assets/docs/guides/customer-view/update-deploy-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import customerPortalLight from '~/assets/docs/guides/customer-view/customer-portal-no-num-light.png';
+import customerPortalDark from '~/assets/docs/guides/customer-view/customer-portal-no-num-dark.png';
+import artifactUICustomerLight from '~/assets/docs/guides/customer-view/artifact-ui-customer-light.png';
+import artifactUICustomerDark from '~/assets/docs/guides/customer-view/artifact-ui-customer-dark.png';
+import artifactUIDetailsLight from '~/assets/docs/guides/customer-view/artifact-ui-details-light.png';
+import artifactUIDetailsDark from '~/assets/docs/guides/customer-view/artifact-ui-details-dark.png';
+import customerAgentNameLight from '~/assets/docs/guides/customer-view/customer-agent-name-light.png';
+import customerAgentNameDark from '~/assets/docs/guides/customer-view/customer-agent-name-dark.png';
+import helmNSLight from '~/assets/docs/guides/customer-view/helm-ns-light.png';
+import helmNSDark from '~/assets/docs/guides/customer-view/helm-ns-dark.png';
+import configLight from '~/assets/docs/guides/customer-view/config-light.png';
+import configDark from '~/assets/docs/guides/customer-view/config-dark.png';
+import statusLight from '~/assets/docs/guides/customer-view/status-light.png';
+import statusDark from '~/assets/docs/guides/customer-view/status-dark.png';
+import logsLight from '~/assets/docs/guides/customer-view/logs-light.png';
+import logsDark from '~/assets/docs/guides/customer-view/logs-dark.png';
+import updateDeployLight from '~/assets/docs/guides/customer-view/update-deploy-light.png';
+import updateDeployDark from '~/assets/docs/guides/customer-view/update-deploy-dark.png';
 
 As an end customer, you will be given access to a [Customer Portal](/docs/product/customer-portal/) by the software vendor.
 The portal you will have access to two key features:
