--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -7,13 +7,13 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import lightSlug from '../../../../assets/docs/product/registry/light-slug.png';
-import darkSlug from '../../../../assets/docs/product/registry/dark-slug.png';
-import dashboardArtifactViewLight from '../../../../assets/docs/product/registry/dashboard-artifact-view-light.png';
-import dashboardArtifactViewDark from '../../../../assets/docs/product/registry/dashboard-artifact-view-dark.png';
-import customerArtifactViewLight from '../../../../assets/docs/product/registry/customer-artifact-view-light.png';
-import customerArtifactViewDark from '../../../../assets/docs/product/registry/customer-artifact-view-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import lightSlug from '~/assets/docs/product/registry/light-slug.png';
+import darkSlug from '~/assets/docs/product/registry/dark-slug.png';
+import dashboardArtifactViewLight from '~/assets/docs/product/registry/dashboard-artifact-view-light.png';
+import dashboardArtifactViewDark from '~/assets/docs/product/registry/dashboard-artifact-view-dark.png';
+import customerArtifactViewLight from '~/assets/docs/product/registry/customer-artifact-view-light.png';
+import customerArtifactViewDark from '~/assets/docs/product/registry/customer-artifact-view-dark.png';
 
 A quick guide to configuring and using the Distr Artifact Registry for secure, tag-based software distribution.
 
