--- a/src/content/docs/docs/integrations/mcp.mdx
+++ b/src/content/docs/docs/integrations/mcp.mdx
@@ -8,7 +8,7 @@ sidebar:
 import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
 import {Image} from 'astro:assets';
 import mcpConfig from './mcp/mcp.json?raw';
-import distrMCPConfig from '../../../../assets/docs/integrations/mcp/distr-mcp-tools.png';
+import distrMCPConfig from '~/assets/docs/integrations/mcp/distr-mcp-tools.png';
 
 Distr exposes its endpoints via the [Model Context Protocol](https://modelcontextprotocol.io/introduction)
 to allow LLM-powered agents to interact with Distr applications, deployments, and logs.
