--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -6,19 +6,19 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import helmAgentLight from '../../../../assets/docs/product/deployment-agents/helm-agent-light.png';
-import helmAgentDark from '../../../../assets/docs/product/deployment-agents/helm-agent-dark.png';
-import dockerAgentLight from '../../../../assets/docs/product/deployment-agents/docker-agent-light.png';
-import dockerAgentDark from '../../../../assets/docs/product/deployment-agents/docker-agent-dark.png';
-import agentApplicationsLight from '../../../../assets/docs/product/deployment-agents/agent-applications-light.png';
-import agentApplicationsDark from '../../../../assets/docs/product/deployment-agents/agent-applications-dark.png';
-import agentDeploymentLight from '../../../../assets/docs/product/deployment-agents/agent-deployment-light.png';
-import agentDeploymentDark from '../../../../assets/docs/product/deployment-agents/agent-deployment-dark.png';
-import agentContLogsDark from '../../../../assets/docs/product/deployment-agents/container-logs-dark.png';
-import agentContLogsLight from '../../../../assets/docs/product/deployment-agents/container-logs-light.png';
-import agentContLogsEnableLight from '../../../../assets/docs/product/deployment-agents/enable-cont-logs-light.png';
-import agentContLogsEnableDark from '../../../../assets/docs/product/deployment-agents/enable-cont-logs-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import helmAgentLight from '~/assets/docs/product/deployment-agents/helm-agent-light.png';
+import helmAgentDark from '~/assets/docs/product/deployment-agents/helm-agent-dark.png';
+import dockerAgentLight from '~/assets/docs/product/deployment-agents/docker-agent-light.png';
+import dockerAgentDark from '~/assets/docs/product/deployment-agents/docker-agent-dark.png';
+import agentApplicationsLight from '~/assets/docs/product/deployment-agents/agent-applications-light.png';
+import agentApplicationsDark from '~/assets/docs/product/deployment-agents/agent-applications-dark.png';
+import agentDeploymentLight from '~/assets/docs/product/deployment-agents/agent-deployment-light.png';
+import agentDeploymentDark from '~/assets/docs/product/deployment-agents/agent-deployment-dark.png';
+import agentContLogsDark from '~/assets/docs/product/deployment-agents/container-logs-dark.png';
+import agentContLogsLight from '~/assets/docs/product/deployment-agents/container-logs-light.png';
+import agentContLogsEnableLight from '~/assets/docs/product/deployment-agents/enable-cont-logs-light.png';
+import agentContLogsEnableDark from '~/assets/docs/product/deployment-agents/enable-cont-logs-dark.png';
 
 Deployment Agents are a core component of the Distr platform, designed to run within customer environments alongside vendor applications. These lightweight agents bridge the gap between the Distr Hub and deployment targets, enabling comprehensive lifecycle management while requiring minimal access to customer infrastructure.
 
