--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -5,11 +5,11 @@ sidebar:
   order: 4
 ---
 
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import brandingConfigLight from '../../../../assets/docs/product/branding/branding-config-light.png';
-import brandingConfigDark from '../../../../assets/docs/product/branding/branding-config-dark.png';
-import customerPortalLight from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-light.png';
-import customerPortalDark from '../../../../assets/docs/guides/customer-view/customer-portal-no-num-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import brandingConfigLight from '~/assets/docs/product/branding/branding-config-light.png';
+import brandingConfigDark from '~/assets/docs/product/branding/branding-config-dark.png';
+import customerPortalLight from '~/assets/docs/guides/customer-view/customer-portal-no-num-light.png';
+import customerPortalDark from '~/assets/docs/guides/customer-view/customer-portal-no-num-dark.png';
 import {Aside} from '@astrojs/starlight/components';
 
 The white-labeling section of the Vendor Portal allows you to apply your own branding to the UI that customers use to deploy and manage your software.
