--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -6,9 +6,9 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import customerPortalLight from '../../../../assets/docs/product/vendor-portal/customer-portal-light.png';
-import customerPortalDark from '../../../../assets/docs/product/vendor-portal/customer-portal-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import customerPortalLight from '~/assets/docs/product/vendor-portal/customer-portal-light.png';
+import customerPortalDark from '~/assets/docs/product/vendor-portal/customer-portal-dark.png';
 
 The customer portal is a simplified, white-labeled control plane UI built for end customers.
 
