--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -6,17 +6,17 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import lightModeRegistry from '../../../../assets/docs/product/registry/light-mode-registry.png';
-import darkModeRegistry from '../../../../assets/docs/product/registry/dark-mode-registry.png';
-import artifactsListLight from '../../../../assets/docs/product/registry/artifacts-list-light.png';
-import artifactsListDark from '../../../../assets/docs/product/registry/artifacts-list-dark.png';
-import artifactDetailsLight from '../../../../assets/docs/product/registry/artifact-details-light.png';
-import artifactDetailsDark from '../../../../assets/docs/product/registry/artifact-details-dark.png';
-import downloadLight from '../../../../assets/docs/product/registry/download-light.png';
-import downloadDark from '../../../../assets/docs/product/registry/download-dark.png';
-import dashboardArtifactViewLight from '../../../../assets/docs/product/registry/dashboard-artifact-view-light.png';
-import dashboardArtifactViewDark from '../../../../assets/docs/product/registry/dashboard-artifact-view-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import lightModeRegistry from '~/assets/docs/product/registry/light-mode-registry.png';
+import darkModeRegistry from '~/assets/docs/product/registry/dark-mode-registry.png';
+import artifactsListLight from '~/assets/docs/product/registry/artifacts-list-light.png';
+import artifactsListDark from '~/assets/docs/product/registry/artifacts-list-dark.png';
+import artifactDetailsLight from '~/assets/docs/product/registry/artifact-details-light.png';
+import artifactDetailsDark from '~/assets/docs/product/registry/artifact-details-dark.png';
+import downloadLight from '~/assets/docs/product/registry/download-light.png';
+import downloadDark from '~/assets/docs/product/registry/download-dark.png';
+import dashboardArtifactViewLight from '~/assets/docs/product/registry/dashboard-artifact-view-light.png';
+import dashboardArtifactViewDark from '~/assets/docs/product/registry/dashboard-artifact-view-dark.png';
 
 The Distr Artifact Registry is a built-in, [OCI-compliant](https://github.com/opencontainers/distribution-spec?tab=readme-ov-file) registry designed for AI and software companies
 to distribute Docker images and Helm Charts, SBOMs and other OCI artifacts to self-managed and BYOC environments.
