--- a/src/content/docs/docs/product/vendor-portal.mdx
+++ b/src/content/docs/docs/product/vendor-portal.mdx
@@ -5,9 +5,9 @@ sidebar:
   order: 1
 ---
 
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import hubLight from '../../../../assets/docs/product/vendor-portal/hub-light.png';
-import hubDark from '../../../../assets/docs/product/vendor-portal/hub-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import hubLight from '~/assets/docs/product/vendor-portal/hub-light.png';
+import hubDark from '~/assets/docs/product/vendor-portal/hub-dark.png';
 
 The Vendor Portal serves as the control plane for vendors, providing access to all Distr features, including [application onboarding](/docs/guides/onboarding-a-helm-app/), [artifact registry](/docs/guides/container-registry/) management, and monitoring of end-customer deployment states. In contrast, the [Customer Portal](/docs/product/customer-portal/) offers a simplified interface for end customers, allowing them to configure and manage their deployments while centralizing release information and helpful instructions for operating the vendor’s software.
 
