--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -6,9 +6,9 @@ sidebar:
 ---
 
 import {Aside, Steps, Tabs, TabItem} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import airgappedLight from '../../../../assets/docs/use-cases/airgapped/airgapped-light.png';
-import airgappedDark from '../../../../assets/docs/use-cases/airgapped/airgapped-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import airgappedLight from '~/assets/docs/use-cases/airgapped/airgapped-light.png';
+import airgappedDark from '~/assets/docs/use-cases/airgapped/airgapped-dark.png';
 
 Distr supports air-gapped environments where strict security requirements demand physical or logical isolation from public networks.
 This deployment model is ideal for organizations in regulated industries, such as defense, finance, and critical infrastructure,
