--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -6,9 +6,9 @@ sidebar:
 ---
 
 import {Aside, Steps} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import fullySelfManagedLight from '../../../../assets/docs/use-cases/fully-self-managed/fully-self-managed-light.png';
-import fullySelfManagedDark from '../../../../assets/docs/use-cases/fully-self-managed/fully-self-managed-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import fullySelfManagedLight from '~/assets/docs/use-cases/fully-self-managed/fully-self-managed-light.png';
+import fullySelfManagedDark from '~/assets/docs/use-cases/fully-self-managed/fully-self-managed-dark.png';
 
 The Fully Self-Managed deployment model is designed for environments where third-party access is not an option.
 It is best suited for customers wanting to have full control over their infrastructure and don't want to use external agents.
