--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -11,9 +11,9 @@ tableOfContents: false
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import distrDiagramLight from '../../../../assets/docs/getting-started/what-is-distr/distr-diagram-light.png';
-import distrDiagramDark from '../../../../assets/docs/getting-started/what-is-distr/distr-diagram-dark.png';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
+import distrDiagramLight from '~/assets/docs/getting-started/what-is-distr/distr-diagram-light.png';
+import distrDiagramDark from '~/assets/docs/getting-started/what-is-distr/distr-diagram-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
 
 Distr is an open source software distribution platform built for multiple [deployment scenarios](/docs/use-cases/fully-self-managed/). It enables software and AI companies to distribute applications and artifacts to self-managed environments.
 
