--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -6,9 +6,9 @@ sidebar:
 ---
 
 import {Aside} from '@astrojs/starlight/components';
-import ThemedImage from '../../../../components/util/ThemedImage.astro';
-import tutorialsLight from '../../../../assets/docs/getting-started/quickstart/tutorials-light.png';
-import tutorialsDark from '../../../../assets/docs/getting-started/quickstart/tutorials-dark.png';
+import ThemedImage from '~/components/util/ThemedImage.astro';
+import tutorialsLight from '~/assets/docs/getting-started/quickstart/tutorials-light.png';
+import tutorialsDark from '~/assets/docs/getting-started/quickstart/tutorials-dark.png';
 
 ## Getting Started with Platform Tutorials
 
