chore: finalize get-started and onboarding
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -64,6 +64,6 @@ Distr enables you to:
 Get started with Distr in minutes. Follow the [quickstart guide](/docs/getting-started/quickstart/) to complete your first tutorials and learn how to use the platform effectively.
 
 <Aside type="note">
-  Ready to begin? Create your Distr account [here](https://signup.distr.sh/) and
-  follow the onboarding steps.
+  Ready to begin? Create your Distr account [here](/get-started/) and follow the
+  onboarding steps.
 </Aside>
